--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -12,6 +12,7 @@
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
+
     <main>
       <section class="card" id="html-section">
 
@@ -28,19 +29,25 @@
 
         <h2>CSS</h2>
         <ul>
-        <li>Open info</li>
+        <li>A margin indicates how much space we want around the outside of an element.</li>
+        <li>A padding indicates how much space we want around the content inside an element.</li>
       </ul>
       </section>
    
       <section class="card" id="git-section">
+        <h2>GIT</h2>
+        <ul>
         <li>git status: checks what branch we are currently on</li>
         <li> git checkout -b branch-name: creates a new 
           branch and switches to it</li>
-   
+        </ul>
       </section>
    
       <section class="card" id="javascript-section">
-        <li>David Tekeste</li>
+        <h2>JavaScript</h2>
+        <ul>
+        <li>Enter your Javascript notes here</li>
+      </ul>
       </section>
     </main>
 
